# dubbo-rust

./: .asf.yaml  .gitignore  .licenserc.yaml  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  README_CN.md  application.yaml  dubbo.yaml  dubbogo.yaml  release.toml  rust-toolchain.toml  rustfmt.toml
common/logger/: Cargo.toml  README.md
common/logger/src/: level.rs  lib.rs  tracing_configurer.rs
common/macro/: Cargo.toml
common/macro/src/: lib.rs
common/utils/: Cargo.toml
common/utils/src/: env_util.rs  host_util.rs  lib.rs  path_util.rs  yaml_util.rs
common/utils/tests/: application.yaml
config/: Cargo.toml  LICENSE
config/examples/: hello.rs
config/src/: api.rs  client.rs  config.rs  consumer.rs  error.rs  lib.rs  location.rs  protocol.rs  provider.rs  registry.rs  router.rs  service.rs  util.rs
config/src/types/: consumer.rs  default.rs  mod.rs  protocol.rs  provider.rs  registry.rs  service.rs  services.rs
config/tests/: dubbo.yaml  hello.rs  test_api.rs  test_use_root_dir.rs
dubbo/: Cargo.toml  readme.md
dubbo-build/: Cargo.toml
dubbo-build/src/: client.rs  generator.rs  lib.rs  prost.rs  server.rs
dubbo-core/: Cargo.toml  README.md
dubbo-macro/: Cargo.toml
dubbo-macro/src/: lib.rs  server_macro.rs  trait_macro.rs
dubbo-rust-examples/: Cargo.toml
dubbo-rust-examples/src/jsonrpc-basic/: addservice.rs  client.rs  server.rs
dubbo-rust-examples/src/jsonrpc-with-router/: addservice.rs  client.rs  mutilservice.rs  server.rs
dubbo-rust-protocol/: Cargo.toml
dubbo-rust-protocol/src/: lib.rs
dubbo-rust-protocol/src/jsonrpc/: mod.rs  server.rs
dubbo-rust-protocol/src/triple/: codec.rs  mod.rs  server.rs  service.rs
dubbo/src/: codegen.rs  context.rs  framework.rs  init.rs  invocation.rs  lib.rs  main.rs  param.rs  status.rs  svc.rs  url.rs
dubbo/src/cluster/: clone_body.rs  clone_invoker.rs  directory.rs  failover.rs  mod.rs
dubbo/src/cluster/loadbalance/: consistent_hash.rs  least_active.rs  mod.rs  random.rs  round_robin.rs  shortest_response.rs  types.rs
dubbo/src/cluster/router/: mod.rs  router_chain.rs  tag.rs  utils.rs
dubbo/src/cluster/support/: cluster_invoke.rs  cluster_invoker.rs  mod.rs
dubbo/src/common/: consts.rs  mod.rs  url.rs
dubbo/src/common/util/: hash.rs  mod.rs
dubbo/src/config/: config.rs  mod.rs  router.rs  service.rs
dubbo/src/directory/: mod.rs
dubbo/src/echo/: echo_client.rs  echo_server.rs  helloworld.rs  mod.rs
dubbo/src/extension/: invoker_extension.rs  mod.rs  registry_extension.rs
dubbo/src/filter/: clusterfilter.rs  context.rs  mod.rs  service.rs  timeout.rs
dubbo/src/helloworld/: client.rs  helloworld.rs  mod.rs
dubbo/src/invoker/: clone_body.rs  clone_invoker.rs  mod.rs
dubbo/src/loadbalancer/: mod.rs  random.rs
dubbo/src/logger/: level.rs  tracing_configurer.rs
dubbo/src/params/: extension_param.rs  mod.rs
dubbo/src/protocol/: invocation.rs  mod.rs  server_desc.rs
dubbo/src/protocol/grpc/: grpc_exporter.rs  grpc_invoker.rs  grpc_protocol.rs  grpc_server.rs  mod.rs
dubbo/src/protocol/triple/: mod.rs  triple_exporter.rs  triple_invoker.rs  triple_protocol.rs  triple_server.rs
dubbo/src/registry/: integration.rs  memory_registry.rs  mod.rs  n_registry.rs  protocol.rs  registry.rs  types.rs
dubbo/src/route/: mod.rs
dubbo/src/rpc/: context.rs  invoker.rs  mod.rs  rpc_status.rs
dubbo/src/service/: invocation.rs  mod.rs  protocol.rs  services.rs
dubbo/src/service/grpc/: grpc_exporter.rs  grpc_invoker.rs  grpc_protocol.rs  grpc_server.rs  mod.rs
dubbo/src/triple/: compression.rs  decode.rs  decode_json.rs  encode.rs  encode_json.rs  mod.rs  triple_wrapper.rs
dubbo/src/triple/client/: builder.rs  connection.rs  grpc.rs  mod.rs  replay.rs  triple.rs
dubbo/src/triple/codec/: buffer.rs  mod.rs  prost.rs  serde_codec.rs
dubbo/src/triple/server/: builder.rs  decode.rs  mod.rs  server.rs  service.rs  support.rs  triple.rs
dubbo/src/triple/transport/: connection.rs  mod.rs  router.rs  service.rs
dubbo/src/utils/: boxed.rs  boxed_clone.rs  mod.rs  tls.rs  yaml_utils.rs
dubbo/tests/: hello.rs
examples/: Cargo.toml  README.md  READMED.md  README_CN.md  build.rs  helloworld-tutorial.md
examples/echo/: Cargo.toml  README.md  README_CN.md  build.rs
examples/echo/fixtures/: server.key
examples/echo/src/: example.http  lib.rs
examples/greeter/: Cargo.toml  README.md  README_CN.md  application.yaml  build.rs  dubbo.yaml
examples/greeter/proto/: greeter.proto
examples/greeter/src/: example.http
examples/grpc-gen/: Cargo.toml  build.rs
examples/grpc-gen/src/: client.rs  greeter.rs  lib.rs  main.rs  server.rs
examples/interface/: Cargo.toml  README.md  README_CN.md  application.yaml
examples/interface/src/: client.rs  lib.rs  server.rs
examples/protobuf-transport/: Cargo.toml  build.rs
examples/protobuf-transport/pb/: person.proto
examples/protobuf-transport/src/: client.rs  lib.rs  server.rs
examples/protobuf/client/: Cargo.toml
examples/protobuf/pb_message/: Cargo.toml  build.rs
examples/protobuf/server/: Cargo.toml
examples/src/: lib.rs
examples/src/echo/: client.rs  server.rs
examples/src/protos/: echo_client.rs  echo_server.rs  hello_echo.rs  helloworld.rs  mod.rs
registry-nacos/: Cargo.toml
registry-nacos/src/: lib.rs  nacos_registry.rs
registry-nacos/src/utils/: mod.rs
registry-zookeeper/: Cargo.toml
registry-zookeeper/src/: lib.rs  zookeeper_registry.rs
registry/nacos/: Cargo.toml
registry/nacos/src/: lib.rs  nacos_registry.rs
registry/zookeeper/: Cargo.toml
registry/zookeeper/src/: lib.rs  zookeeper_registry.rs
remoting/base/: Cargo.toml
remoting/base/src/: codec.rs  error.rs  exchange.rs  exchange_client.rs  lib.rs
remoting/net/: Cargo.toml
remoting/net/src/: conn.rs  dial.rs  incoming.rs  lib.rs  probe.rs  tests.rs
xds/: Cargo.toml
xds/examples/: hello.rs
xds/src/: error.rs  lib.rs  request.rs  response.rs  util.rs  wrapper.rs
xds/src/client/: client.rs  mod.rs
xds/src/protocol/: error.rs  message.rs  mod.rs
xds/src/server/: mod.rs  server.rs
xds/tests/: hello.rs
(+152 files in other folders)
