[workspace]
members = [
  "common/logger",
  "common/utils",
  "common/extention",
  "common/base",
  "registry/zookeeper",
  "registry/nacos",
  "metadata",
  "config",
  "dubbo",
  "examples/echo",
  "examples/greeter",
  "dubbo-build",
  "remoting/net",
  "remoting/http",
  "remoting/h2",
  "remoting/zookeeper",
  "remoting/exchange",
  "remoting/xds",
  "protocol/dubbo2",
  "protocol/base",
  "protocol/triple"
]


[workspace.dependencies]
pin-project = "1"
tokio = "1.0"
tower = "0.4"
tokio-stream = "0.1"
tokio-util = "0.7"
socket2 = "0.4"
async-trait = "0.1"
dashmap = "5"
lazy_static = "1"
futures = "0.3"
serde = "1"
serde_json = "1"
urlencoding = "2.1.2"
logger = {path="./common/logger"}
utils = {path="./common/utils"}
base = {path="./common/base"}
remoting-net = {path="./remoting/net"}
protocol = {path= "protocol/base" }
protocol-dubbo2 = {path="./protocol/dubbo2"}
protocol-triple = {path="./protocol/triple"}
registry-zookeeper = {path="./registry/zookeeper"}
registry-nacos = {path="./registry/nacos"}
anyhow = "1.0.66"
dubbo = { path = "./dubbo/" }
bb8 = "0.8.0" # A connecton pool based on tokio
serde_yaml = "0.9.4" # yaml file parser
once_cell = "1.16.0"
itertools = "0.10.1"


