[package]
name = "dubbo-config"
version = "0.1.0"
edition = "2021"
description = ""
documentation = ""
homepage = "https://dubbo.apache.org/en/"
repository = "https://github.com/apache/dubbo-rust"
keywords = ["dubbo", "rpc"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.138", features = ["derive"]}
serde_yaml = "0.9.4"
tracing = "0.1"
lazy_static = "1.3.0"
