[package]
name = "dubbo-config"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-config"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.138", features = ["derive"]}
serde_yaml = "0.9.4"
tracing = "0.1"
lazy_static = "1.3.0"
once_cell = "1.16.0"
