[package]
name = "dubbo-config"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-config"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
dubbo-utils.workspace = true
dubbo-logger.workspace=true