[package]
name = "dubbo-build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version ="0.7.2", features = ["compression",]}
prost = "0.11.0"
tonic-build = "0.8.0"
prettyplease = {version = "0.1"}
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

prost-build = {git="https://github.com/tokio-rs/prost.git"}