[package]
name = "dubbo-build"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-build"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.9"
prettyplease = {version = "0.1"}
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
prost-build = "0.11.9"
