[package]
name = "dubbo-rust-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
pin-project-lite  = { version = "0.2.9" }
hyper = { version = "0.14.19", features = ["server","http1","tcp","http2","client"] }
tokio = "1.19.2"
tower = { version = "0.4.12", features = ["util"] }
futures = "0.3.21"
log = "0.4.17"
http = "0.2.8"
http-body = "*"
prost = "0.10.4"
async-trait = "*"