[package]
name = "dubbo"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["full"] }
http = "0.2"
tower-service.workspace = true
http-body = "0.4.4"
tower = { workspace = true, features = ["timeout"] }
futures-util = "0.3.23"
futures-core ="0.3.23"
argh = "0.1"
rustls-pemfile = "1.0.0"
rustls-webpki = "0.101.3"
rustls-native-certs = "0.6.3"
tokio-rustls="0.24.1"
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal",  "full" ] }
prost = "0.11.9"
async-trait = "0.1.56"
tower-layer.workspace = true
bytes.workspace = true
pin-project.workspace = true
rand = "0.8.5"
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
axum = "0.5.9"
async-stream = "0.3"
flate2 = "1.0"
aws-smithy-http = "0.55.2"
dyn-clone = "1.0.11"
itertools.workspace = true
urlencoding.workspace = true
lazy_static.workspace = true
dubbo-base.workspace = true
dubbo-logger.workspace = true

dubbo-config = { path = "../config", version = "0.3.0" }

#对象存储
state = { version = "0.5", features = ["tls"] }
