[package]
name = "dubbo-registry-zookeeper"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-registry-zookeeper"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zookeeper = "0.7.0"
dubbo = {path = "../dubbo/", version = "0.3.0" }
serde_json = "1.0"
serde = {version = "1.0.145",features = ["derive"]}
tracing = "0.1"
urlencoding = "2.1.2"
