[package]
name = "xds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = {version = "1.9.0", features = ["full"]}
futures = "0.3.16"

# protocol
byteorder = "1.3.2"
strum = "0.21.0"
strum_macros = "0.21.1"
num-traits = "0.2.8"
enum-primitive-derive = "0.1.2"
serde = { version = "1.0.126",features = ["derive"]}
serde_json = "1.0.40"
bytes = "1.0.1"
flate2 = "1.0"

# server
tower = "0.4"
log = "0.4"
env_logger = "0.9.0"


prost = "0.10.4"