[package]
name = "logger"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace=true
tracing-subscriber.workspace=true
once_cell.workspace = true
utils.workspace = true
config.workspace = true