[package]
name = "example-echo"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo-server"
path = "src/echo/server.rs"

[[bin]]
name = "echo-client"
path = "src/echo/client.rs"

[dependencies]
http = "0.2"
http-body = "0.4.4"
futures-util = {version = "0.3", default-features = false}
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
prost-derive = {version = "0.10", optional = true}
prost = "0.10.4"
async-trait = "0.1.56"
tokio-stream = "0.1"

dubbo = {path = "../../dubbo", version = "0.2.0"}
dubbo-config = {path = "../../config", version = "0.2.0"}

serde_json = "1.0.82"
serde = {version="1.0.138", features = ["derive"]}

[build-dependencies]
dubbo-build = {path = "../../dubbo-build", version = "0.2.0"}
