[package]
name = "example-echo"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-examples-echo"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[[bin]]
name = "echo-server"
path = "src/echo/server.rs"

[[bin]]
name = "echo-client"
path = "src/echo/client.rs"

[[bin]]
name = "echo-tls-server"
path = "src/echo-tls/server.rs"

[[bin]]
name = "echo-tls-client"
path = "src/echo-tls/client.rs"

[dependencies]
http = "0.2"
http-body = "0.4.4"
futures-util = {version = "0.3", default-features = false}
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
prost-derive = {version = "0.11.9", optional = true}
prost = "0.11.9"
prost-serde = "0.3.0"
prost-serde-derive = "0.1.2"
serde = { version = "1.0.171",features = ["derive"]  }
async-trait = "0.1.56"
tokio-stream = "0.1"
dubbo-logger.workspace=true

dubbo = {path = "../../dubbo"}
dubbo-config = {path = "../../config", version = "0.3.0" }
registry-zookeeper.workspace=true

[build-dependencies]
dubbo-build = {path = "../../dubbo-build", version = "0.3.0" }
