[package]
name = "example-greeter"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-examples-greeter"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[[bin]]
name = "greeter-server"
path = "src/greeter/server.rs"

[[bin]]
name = "greeter-client"
path = "src/greeter/client.rs"

[dependencies]
http = "0.2"
http-body = "0.4.4"
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
prost-derive = { version = "0.11.9", optional = true }
prost = "0.11.9"
serde = { version = "1.0.171",features = ["derive"]  }
prost-serde = "0.3.0"
prost-serde-derive = "0.1.2"
async-trait = "0.1.56"
tokio-stream = "0.1"
dubbo-logger = { path = "../../common/logger" }
dubbo = { path = "../../dubbo"}
dubbo-config = { path = "../../config", version = "0.3.0" }
registry-zookeeper.workspace = true
registry-nacos.workspace = true
dubbo-base.workspace = true

[build-dependencies]
dubbo-build = { path = "../../dubbo-build", version = "0.3.0" }
