[package]
name = "grpc-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
prost = "0.10.4"
async-trait = { version = "0.1.56" }
xds = { version = "0.1.0", path = "../../xds" }

hyper = { version = "0.14.19", features = ["full"] }



[build-dependencies]
prost-build = "0.10.4"
dubbo-build = { path = "../../dubbo-build", features = ["generator-code"] }