[package]
name = "example-interface"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-examples-interface"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
release = false

[[bin]]
name = "interface-server"
path = "src/server.rs"

[[bin]]
name = "interface-client"
path = "src/client.rs"

[dependencies]
http = "0.2"
http-body = "0.4.4"
futures-util = {version = "0.3", default-features = false}
tokio = { version = "1.0", features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal"] }
prost-derive = {version = "0.10", optional = true}
prost = "0.10.4"
async-trait = "0.1.56"
tokio-stream = "0.1"
dubbo-macro = { path = "../../dubbo-macro", version = "0.3.0" }
dubbo = { path = "../../dubbo"}
registry-zookeeper.workspace = true
registry-nacos.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1"
url = "2.5.0"
