[package]
name = "registry-nacos"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-registry-nacos"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nacos-sdk = { version = "0.2.3", features = ["naming", "auth-by-http"] }
dubbo.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
anyhow.workspace = true
dubbo-logger.workspace = true
dubbo-base.workspace = true

[dev-dependencies]
tracing-subscriber = "0.3.16"
tracing = "0.1"
