[package]
name = "registry-zookeeper"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo-rust-registry-zookeeper"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zookeeper = "0.7.0"
dubbo.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
urlencoding.workspace = true
dubbo-logger.workspace = true
dubbo-base.workspace = true
