[package]
name = "remoting"
version = "0.1.0"
edition = "2021"


[dependencies]
pin-project.workspace = true
tokio = { workspace = true, features = ["net", "time", "sync", "io-util","test-util","macros"] }
tokio-stream = { workspace = true, features = ["net"] }
tower.workspace = true
socket2.workspace = true
async-trait.workspace = true
dashmap.workspace = true
lazy_static.workspace = true
futures.workspace = true
tracing.workspace = true
